Renamed `docker-compose.yml` to `compose.yaml`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "PROJECT",
-  "dockerComposeFile": "../docker/docker-compose.yml",
+  "dockerComposeFile": "../docker/compose.yaml",
   "service": "main",
   "workspaceFolder": "/home/user/workspace"
 }
