Defined project name in `compose.yaml`

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,8 +1,10 @@
+name: placeholder-project-name
 services:
   main:
     build:
       context: ..
       dockerfile: docker/Dockerfile
+    hostname: placeholder-project-name
     stdin_open: true
     tty: true
     volumes:
