--- a/docker/build
+++ b/docker/build
@@ -1,6 +1,5 @@
 #!/usr/bin/env bash
 
 SCRIPT_DIRECTORY=$(cd $(dirname "${BASH_SOURCE[0]}") && pwd)
-PROJECT_NAME=$(basename $(dirname "${SCRIPT_DIRECTORY}"))
 
-docker compose --project-name ${PROJECT_NAME} --file ${SCRIPT_DIRECTORY}/compose.yaml build --pull
+docker compose --file ${SCRIPT_DIRECTORY}/compose.yaml build --pull
